--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "resolutions": {
     "socket.io-parser": "^4.2.3",
-    "engine.io": "^6.4.2"
+    "engine.io": "^6.4.2",
+    "semver": "^7.5.2"
   },
   "packageManager": "yarn@3.4.1",
   "dependencies": {
