--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: 18
           cache: yarn
       - name: Install dependencies
-        run: npm install
+        run: yarn install
       - name: Build
         run: yarn run build
       - name: Deploy
