--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch:postcss": "postcss ./style/theme.css -o ./style/theme.build.css --watch",
     "watch:bs": "browser-sync start --proxy https://prif.test --https --watch --files templates layout style lang lib.php config.php",
     "start": "cross-env NODE_ENV=dev run-p 'watch:*'",
-    "build": "cross-env NODE_ENV=production run-s 'build:*'"
+    "build": "cross-env NODE_ENV=production run-s build:webpack build:sass build:postcss"
   },
   "author": "Max Kohler",
   "license": "ISC",
@@ -42,6 +42,7 @@
   },
   "packageManager": "yarn@3.4.1",
   "dependencies": {
+    "cssnano": "^6.0.1",
     "js-cookie": "^3.0.5"
   }
 }
