--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -2,6 +2,9 @@ name: "Deploy to staging"
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 permissions:
   contents: read
 
@@ -10,7 +13,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  main:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,13 +25,12 @@ jobs:
         run: yarn install
       - name: Build
         run: yarn run build
-      - name: Deploy
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      - uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.STAGING_FTP_USER }}
           password: ${{ secrets.STAGING_FTP_PASSWORD }}
-          server-dir: /staging.nonproliferation-elearning.eu/theme/hsfk/
+          server-dir: /theme/hsfk/
           dry-run: false
           exclude: |
             **/.git*
